--- a/src/Makefile
+++ b/src/Makefile
@@ -1,3 +1,17 @@
 lab2:
 	#replace the following command with your compilation command
-	javac *.java 
+	javac *.java
+
+test1:
+	java lab2 test1.asm > out.txt
+	diff -w -B out.txt test1.output
+
+test2:
+	java lab2 test2.asm > out.txt
+	diff -w -B out.txt test2.output
+test3:
+	java lab2 test3.asm > out.txt
+	diff -w -B out.txt test3.output
+test4:
+	java lab2 test4.asm > out.txt
+	diff -w -B out.txt test4.output
