--- a/src/Makefile
+++ b/src/Makefile
@@ -1,16 +1,20 @@
-lab3:
+lab4:
 	#replace the following command with your compilation command
 	javac *.java
 
 test1:
-	java lab3 test1.asm script1.txt > out.txt
+	java lab4 test1.asm script1.txt > out.txt
 	diff -w -B out.txt output1.txt
 
 test2:
-	java lab3 test2.asm script2.txt > out.txt
+	java lab4 test2.asm script2.txt > out.txt
 	diff -w -B out.txt output2.txt
 
 test3:
-	java lab3 test3.asm script3.txt > out.txt
+	java lab4 test3.asm script3.txt > out.txt
 	diff -w -B out.txt output3.txt
+
+test4:
+	java lab4 test4.asm script4.txt > out.txt
+	diff -w -B out.txt output4.txt
 
